--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ a {
     display: none;
 }
 
-/* ------------------------------------------------------------------------------------------- House selectors and Q+As */
+/* ------------------------------------------------------------------------------------------- Type selectors and Q+As */
 
 .main-area {
     display: flex;
